	  HAVE_SNPRINTF. (DLR)
	- Remove TOP from the topmidnone enum, and rename the latter
	  centernone. (DLR)
	- Move stdlib.h, dirent.h, regex.h, and assert.h includes here,
	  as every source file needs them. (DLR)
	- Rename the updown enum scroll_dir and the centernone enum
	  update_type for clarity, and add an append_type enum. (DLR)
- rcfile.c:
  nregcomp()
	- Return TRUE when the compilation succeeds and FALSE otherwise,
	  instead of the other way around. (DLR)
- search.c:
  search_init()
	- Don't blank out last_replace anymore when we get a new string,
	  as it'll be blanked out in do_replace().  Also, consolidate
	  the cases for blank and new search strings, as they now differ
	  only in which string they pass to regexp_init(). (DLR)
  replace_abort()
	- Remove unnecessary update of placewewant. (DLR)
  do_replace()
	- Blank out last_replace properly again just before displaying
	  the "Replace" prompt. (DLR, found by Mike Frysinger)
	- Remove unnecessary renumber(). (DLR)
  do_gotolinecolumn()
	- Add parameter allow_update to control whether the screen is
	  updated after moving.  If it's TRUE, call edit_refresh() after
	  edit_update(). (DLR)
  do_gotopos()
	- Only include this function when DISABLE_SPELLER isn't defined,
	  as the alternate spell checking code is now the only place
	  where it's used. (DLR)
  do_find_bracket()
	- Add comments and minor cleanups. (DLR)
  find_history()
	- Make parameters const where possible. (DLR)
  update_history()
	- Don't renumber the history list starting after the entry we
	  found if the entry we found is at the bottom of the list.
	  (DLR, found by Simon Strandman)
  get_history_completion()
	- Make parameters const where possible. (DLR)
- text.c:
  do_word_count()
	- Rename to do_wordlinechar_count(), and expand to also count
	  the number of lines and characters in the file or selection,
	  as wc does. (DLR)
- winio.c:
  get_word_kbinput()
	- Multiply the entered digits by hexadecimal numbers instead of